--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
 <li>Cancel open orders by volume</li>
 </ul>
 
-<p><strong>Please read <a href="https://github.com/XDAEX/API/wiki/XDAEX_API_Introduction">XDAEX API Introduction</a> before using API.</strong></p>
+<p><strong>Please read <a href="https://yushizhao.github.io/XDAEXINTRO/">XDAEX API Introduction</a> before using API.</strong></p>
 
-<p><strong>Please read <a href="https://github.com/XDAEX/API/wiki/XDAEX_API_Preview_Environment_introduction">Introduction to Preview Environment</a> for details of XDAEX API preview environment.</strong></p>
+<p><strong>Please read <a href="https://yushizhao.github.io/XDAEXINTROPRE/">Introduction to Preview Environment</a> for details of XDAEX API preview environment.</strong></p>
 
 <p>Please sign in xdaex.com and visit &quot;User Center - API Interface&quot; to manage your API-KEY.</p>
 
@@ -269,17 +269,17 @@
 <li>批量撤单</li>
 </ul>
 
-<p><strong>操作前请您务必阅读 <a href="https://github.com/XDAEX/API/wiki/XDAEX_API_Introduction">XDAEX 程序化交易接入说明</a>。</strong></p>
+<p><strong>操作前请您务必阅读 <a href="https://yushizhao.github.io/XDAEXINTRO/">XDAEX 程序化交易接入说明</a>。</strong></p>
 
-<p><strong>想了解XDAEX程序化交易预览环境，请您阅读<a href="https://github.com/XDAEX/API/wiki/XDAEX_API_Preview_Environment_introduction">预览环境接入说明</a>。</strong></p>
+<p><strong>想了解XDAEX程序化交易预览环境，请您阅读<a href="https://yushizhao.github.io/XDAEXINTROPRE/">预览环境接入说明</a>。</strong></p>
 
 <p>请登录 xdaex.com 并访问 “个人中心 - API接口” 以管理您的 API-KEY。</p>
 
 <p>常见问题请参考 <a href="https://support.xdaex.com/hc/zh-cn/search?utf8=✓&amp;query=api">FAQ</a></p>
 <h1 id='1-xdaex-api-introduction-emsp-xdaex'>1. XDAEX API Introduction<br \>&emsp;XDAEX 程序化交易接入说明</h1>
 <ul>
-<li><a href="https://github.com/XDAEX/API/wiki/XDAEX_API_Introduction">XDAEX API Introduction ^XDAEX 程序化交易接入说明</a></li>
-<li><a href="https://github.com/XDAEX/API/wiki/XDAEX_API_Preview_Environment_introduction">Introduction to Preview Environment ^预览环境接入说明</a></li>
+<li><a href="https://yushizhao.github.io/XDAEXINTRO/">XDAEX API Introduction ^XDAEX 程序化交易接入说明</a></li>
+<li><a href="https://yushizhao.github.io/XDAEXINTROPRE/">Introduction to Preview Environment ^预览环境接入说明</a></li>
 <li><a href="https://github.com/XDAEX/API/raw/master/documents/API_Letter_of_Agreement_EN.pdf">API Letter of Agreement(PDF)</a> ^<a href="https://github.com/XDAEX/API/raw/master/documents/API_Letter_of_Agreement_CN.pdf">API协议信(PDF)</a></li>
 <li><a href="https://github.com/XDAEX/API/raw/master/documents/API_Application_Information_EN.pdf">API Application Information(PDF)</a> ^<a href="https://github.com/XDAEX/API/raw/master/documents/API_Application_Information_CN.pdf">API申请信息表(PDF)</a></li>
 </ul>
@@ -288,13 +288,13 @@
 <li>For production environment and test environment ^生产环境与测试环境:</li>
 </ul>
 
-<p><a href="https://yushizhao.github.io/XDAEXAPI/#1-quick-start">API Specification ^API说明文档 v4.2.0</a></p>
+<p><a href="https://yushizhao.github.io/XDAEXAPI/">API Specification ^API说明文档 v4.2.0</a></p>
 
 <ul>
 <li>For preview environment ^预览环境:</li>
 </ul>
 
-<p><a href="https://yushizhao.github.io/XDAEXAPI/#1-quick-start">API Specification ^API说明文档 v4.2.0</a></p>
+<p><a href="https://yushizhao.github.io/XDAEXAPI/">API Specification ^API说明文档 v4.2.0</a></p>
 <h1 id='3-sample-code-emsp'>3. Sample Code<br \>&emsp;示例代码</h1><h2 id='3-1-rest-interfacerest'>3.1. REST Interface<br \>REST 接口</h2>
 <ul>
 <li>Java
