--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
         <ul class="search-results"></ul>
       <ul id="toc" class="toc-list-h1">
           <li>
-            <a href="#welcome-to-xdaex-api-xdaex-api" class="toc-h1 toc-link" data-title="Welcome to XDAEX API欢迎使用 XDAEX API">Welcome to XDAEX API<br>欢迎使用 XDAEX API</a>
+            <a href="#welcome-to-hashkey-pro-api-hashkey-pro-api" class="toc-h1 toc-link" data-title="Welcome to HashKey Pro API欢迎使用 HashKey Pro API">Welcome to HashKey Pro API<br>欢迎使用 HashKey Pro API</a>
           </li>
           <li>
-            <a href="#1-xdaex-api-introduction-emsp-xdaex" class="toc-h1 toc-link" data-title="1. XDAEX API Introduction XDAEX 程序化交易接入说明">1. XDAEX API Introduction<br> XDAEX 程序化交易接入说明</a>
+            <a href="#1-hashkey-pro-api-introduction-emsp-hashkey-pro" class="toc-h1 toc-link" data-title="1. HashKey Pro API Introduction HashKey Pro 程序化交易接入说明">1. HashKey Pro API Introduction<br> HashKey Pro 程序化交易接入说明</a>
           </li>
           <li>
             <a href="#2-api-specification-emsp-api" class="toc-h1 toc-link" data-title="2. API Specification API说明文档">2. API Specification<br> API说明文档</a>
@@ -240,7 +240,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='welcome-to-xdaex-api-xdaex-api'>Welcome to XDAEX API<br \>欢迎使用 XDAEX API</h1>
+        <h1 id='welcome-to-hashkey-pro-api-hashkey-pro-api'>Welcome to HashKey Pro API<br \>欢迎使用 HashKey Pro API</h1>
 <p><strong>Following functions can be implemented easily with API：</strong></p>
 
 <ul>
@@ -251,11 +251,11 @@
 <li>Cancel open orders by volume</li>
 </ul>
 
-<p><strong>Please read <a href="https://yushizhao.github.io/XDAEXINTRO/">XDAEX API Introduction</a> before using API.</strong></p>
+<p><strong>Please read <a href="https://yushizhao.github.io/XDAEXINTRO/">HashKey Pro API Introduction</a> before using API.</strong></p>
 
-<p><strong>Please read <a href="https://yushizhao.github.io/XDAEXINTROPRE/">Introduction to Preview Environment</a> for details of XDAEX API preview environment.</strong></p>
+<p><strong>Please read <a href="https://yushizhao.github.io/XDAEXINTROPRE/">Introduction to Preview Environment</a> for details of HashKey Pro API preview environment.</strong></p>
 
-<p>Please sign in xdaex.com and visit &quot;User Center - API Interface&quot; to manage your API-KEY.</p>
+<p>Please sign in pro.hashkey.com and visit &quot;User Center - API Interface&quot; to manage your API-KEY.</p>
 
 <p>Frequently asked questions <a href="https://support.xdaex.com/hc/en-us/search?utf8=%E2%9C%93&amp;query=api">FAQ</a></p>
 
@@ -269,16 +269,16 @@
 <li>批量撤单</li>
 </ul>
 
-<p><strong>操作前请您务必阅读 <a href="https://yushizhao.github.io/XDAEXINTRO/">XDAEX 程序化交易接入说明</a>。</strong></p>
+<p><strong>操作前请您务必阅读 <a href="https://yushizhao.github.io/XDAEXINTRO/">HashKey Pro 程序化交易接入说明</a>。</strong></p>
 
-<p><strong>想了解XDAEX程序化交易预览环境，请您阅读<a href="https://yushizhao.github.io/XDAEXINTROPRE/">预览环境接入说明</a>。</strong></p>
+<p><strong>想了解 HashKey Pro 程序化交易预览环境，请您阅读<a href="https://yushizhao.github.io/XDAEXINTROPRE/">预览环境接入说明</a>。</strong></p>
 
-<p>请登录 xdaex.com 并访问 “个人中心 - API接口” 以管理您的 API-KEY。</p>
+<p>请登录 pro.hashkey.com 并访问 “个人中心 - API接口” 以管理您的 API-KEY。</p>
 
 <p>常见问题请参考 <a href="https://support.xdaex.com/hc/zh-cn/search?utf8=✓&amp;query=api">FAQ</a></p>
-<h1 id='1-xdaex-api-introduction-emsp-xdaex'>1. XDAEX API Introduction<br \>&emsp;XDAEX 程序化交易接入说明</h1>
+<h1 id='1-hashkey-pro-api-introduction-emsp-hashkey-pro'>1. HashKey Pro API Introduction<br \>&emsp;HashKey Pro 程序化交易接入说明</h1>
 <ul>
-<li><a href="https://yushizhao.github.io/XDAEXINTRO/">XDAEX API Introduction ^XDAEX 程序化交易接入说明</a></li>
+<li><a href="https://yushizhao.github.io/XDAEXINTRO/">HashKey Pro API Introduction ^HashKey Pro 程序化交易接入说明</a></li>
 <li><a href="https://yushizhao.github.io/XDAEXINTROPRE/">Introduction to Preview Environment ^预览环境接入说明</a></li>
 <li><a href="https://github.com/XDAEX/API/raw/master/documents/API_Letter_of_Agreement_EN.pdf">API Letter of Agreement(PDF)</a> ^<a href="https://github.com/XDAEX/API/raw/master/documents/API_Letter_of_Agreement_CN.pdf">API协议信(PDF)</a></li>
 <li><a href="https://github.com/XDAEX/API/raw/master/documents/API_Application_Information_EN.pdf">API Application Information(PDF)</a> ^<a href="https://github.com/XDAEX/API/raw/master/documents/API_Application_Information_CN.pdf">API申请信息表(PDF)</a></li>
