publish: api-src::doc
generated from commit 5f5c73a5ba89fcf647128e0b9a751816f11bdd3c

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
 <ul>
 <li><a href="https://hashkeypro.github.io/api-intro/">HashKey Pro API Introduction ^HashKey Pro 程序化交易接入说明</a></li>
 <li><a href="https://hashkeypro.github.io/api-intro-pre/">Introduction to Preview Environment ^预览环境接入说明</a></li>
-<li><a href="https://github.com/XDAEX/API/raw/master/documents/API_Letter_of_Agreement_EN.pdf">API Letter of Agreement(PDF)</a> ^<a href="https://github.com/XDAEX/API/raw/master/documents/API_Letter_of_Agreement_CN.pdf">API协议信(PDF)</a></li>
-<li><a href="https://github.com/XDAEX/API/raw/master/documents/API_Application_Information_EN.pdf">API Application Information(PDF)</a> ^<a href="https://github.com/XDAEX/API/raw/master/documents/API_Application_Information_CN.pdf">API申请信息表(PDF)</a></li>
+<li><a href="https://github.com/hashkeypro/api-src/raw/master/doc/API_Letter_of_Agreement_EN%20HashKey%20Pro.pdf">API Letter of Agreement(PDF)</a> ^<a href="https://github.com/hashkeypro/api-src/raw/master/doc/API_Letter_of_Agreement_CN%20HashKey%20Pro.pdf">API协议信(PDF)</a></li>
+<li><a href="https://github.com/hashkeypro/api-src/raw/master/doc/API_Application_Information_EN%20HK%20PRO.pdf">API Application Information(PDF)</a> ^<a href="https://github.com/hashkeypro/api-src/raw/master/doc/API_Application_Information_CN%20HK%20PRO.pdf">API申请信息表(PDF)</a></li>
 </ul>
 <h1 id='2-api-specification-emsp-api'>2. API Specification<br \>&emsp;API说明文档</h1>
 <ul>
