--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
 <p>Please sign in pro.hashkey.com and visit &quot;User Center - API Interface&quot; to manage your API-KEY.</p>
 
-<p>Frequently asked questions <a href="https://support.xdaex.com/hc/en-us/search?utf8=%E2%9C%93&amp;query=api">FAQ</a></p>
+<p>Frequently asked questions <a href="https://support.pro.hashkey.com/hc/en-us/search?utf8=%E2%9C%93&amp;query=API">FAQ</a></p>
 
 <p><strong>通过 API 可以快速实现以下功能：</strong></p>
 
@@ -275,7 +275,7 @@
 
 <p>请登录 pro.hashkey.com 并访问 “个人中心 - API接口” 以管理您的 API-KEY。</p>
 
-<p>常见问题请参考 <a href="https://support.xdaex.com/hc/zh-cn/search?utf8=✓&amp;query=api">FAQ</a></p>
+<p>常见问题请参考 <a href="https://support.pro.hashkey.com/hc/zh-cn/search?utf8=%E2%9C%93&amp;query=API">FAQ</a></p>
 <h1 id='1-hashkey-pro-api-introduction-emsp-hashkey-pro'>1. HashKey Pro API Introduction<br \>&emsp;HashKey Pro 程序化交易接入说明</h1>
 <ul>
 <li><a href="https://hashkeypro.github.io/api-intro/">HashKey Pro API Introduction ^HashKey Pro 程序化交易接入说明</a></li>
