--- a/index.html
+++ b/index.html
@@ -226,14 +226,6 @@
           </li>
           <li>
             <a href="#3-sample-code-emsp" class="toc-h1 toc-link" data-title="3. Sample Code 示例代码">3. Sample Code<br> 示例代码</a>
-              <ul class="toc-list-h2">
-                  <li>
-                    <a href="#3-1-rest-interfacerest" class="toc-h2 toc-link" data-title="3.1. REST InterfaceREST 接口">3.1. REST Interface<br>REST 接口</a>
-                  </li>
-                  <li>
-                    <a href="#3-2-websocket-subscriptionwebsocket" class="toc-h2 toc-link" data-title="3.2. WebSocket SubscriptionWebSocket 订阅">3.2. WebSocket Subscription<br>WebSocket 订阅</a>
-                  </li>
-              </ul>
           </li>
       </ul>
     </div>
@@ -295,37 +287,13 @@
 </ul>
 
 <p><a href="https://hashkeypro.github.io/api-spec/">API Specification ^API说明文档 v4.2.0</a></p>
-<h1 id='3-sample-code-emsp'>3. Sample Code<br \>&emsp;示例代码</h1><h2 id='3-1-rest-interfacerest'>3.1. REST Interface<br \>REST 接口</h2>
+<h1 id='3-sample-code-emsp'>3. Sample Code<br \>&emsp;示例代码</h1>
 <ul>
-<li>Java
-
-<ul>
-<li> <a href="https://github.com/XDAEX/API/raw/master/java/xdaex-trading-sdk-1.0.jar">Java SDK</a></li>
-<li> <a href="https://github.com/XDAEX/API/wiki/REST_sample_java">Java Sample</a></li>
-</ul></li>
-<li>Python
-
-<ul>
-<li> <a href="https://github.com/XDAEX/API/wiki/REST_sample_python">Python Sample</a></li>
-</ul></li>
-<li>Golang
-
-<ul>
-<li> <a href="https://github.com/XDAEX/API/tree/master/golang/eccutils">Golang Package</a></li>
-<li> <a href="https://github.com/XDAEX/API/wiki/REST_sample_golang">Golang Sample</a></li>
-</ul></li>
-<li>C++
-
-<ul>
-<li> <a href="https://github.com/XDAEX/API/raw/master/cpp/eccutils.hpp">C++ header</a></li>
-<li> <a href="https://github.com/XDAEX/API_Docs/wiki/REST_sample_cpp">C++ Sample</a></li>
-</ul></li>
-</ul>
-<h2 id='3-2-websocket-subscriptionwebsocket'>3.2. WebSocket Subscription<br \>WebSocket 订阅</h2>
-<ul>
-<li><a href="https://github.com/XDAEX/API/wiki/WebSocket_subscription_sample_javascript">JavaScript</a></li>
-<li><a href="https://github.com/XDAEX/API/wiki/WebSocket_subscription_sample_golang">Golang</a></li>
-<li><a href="https://github.com/XDAEX/API/wiki/WebSocket_subscription_sample_cpp">C++</a></li>
+<li><a href="https://github.com/hashkeypro/api-src/tree/master/golang">Golang</a></li>
+<li><a href="https://github.com/hashkeypro/api-src/tree/master/python">Python</a></li>
+<li><a href="https://github.com/hashkeypro/api-src/tree/master/cpp">C++</a></li>
+<li><a href="https://github.com/hashkeypro/api-src/tree/master/javascript">JavaScript</a></li>
+<li><a href="https://github.com/hashkeypro/api-src/tree/master/java">Java</a></li>
 </ul>
 
       </div>
