publish: add links
generated from commit 865984726eb1742ab068929cf8f335b3e22da6bb

--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
             <a href="#3-sample-code-emsp" class="toc-h1 toc-link" data-title="3. Sample Code 示例代码">3. Sample Code<br> 示例代码</a>
           </li>
       </ul>
+        <ul class="toc-footer">
+            <li><a href='https://hashkeypro.github.io/api'>API home page</a></li>
+            <li><a href='https://pro.hashkey.com'>Hashkey Pro Official Site</a></li>
+        </ul>
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
