--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <li>For preview environment ^预览环境:</li>
 </ul>
 
-<p><a href="https://hashkeypro.github.io/api-spec/">API Specification ^API说明文档 v4.2.0</a></p>
+<p><a href="https://hashkeypro.github.io/api-spec-pre/">API Specification ^API说明文档 v4.3.0</a></p>
 <h1 id='3-sample-code-emsp'>3. Sample Code<br \>&emsp;示例代码</h1>
 <ul>
 <li><a href="https://github.com/hashkeypro/api-src/tree/master/golang">Golang</a></li>
